experiments picture updates

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,9 @@ TEST_DB_NAME=
 TEST_DB_USER=
 TEST_DB_PASSWORD=
 
+### FB CREDENTIALS ###
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
 
 ### EMAIL ###
 
