getting ready for prod deploy

--- a/.env.example
+++ b/.env.example
@@ -37,9 +37,13 @@ TEST_DB_PASSWORD=
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 
+### GOOGLE ANALYTICS ###
+GOOGLE_ANALYTICS_ID=
+
 ### EMAIL ###
 
 APPLICATION_ERROR_FROM_EMAIL=
 APPLICATION_FEEDBACK_TO_EMAIL=
 APPLICATION_FEEDBACK_FROM_EMAIL=
 APPLICATION_FEEDBACK_FROM_PWD=
+
