switching to real domain for prod

--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,9 @@ TEST_DB_PASSWORD=
 FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 
+### ADDTHIS ###
+ADDTHIS_ID=
+
 ### GOOGLE ANALYTICS ###
 GOOGLE_ANALYTICS_ID=
 
